@@ -455,6 +455,7 @@
 1190 2016- 9-13 OpeTemplatePage: recurrent operation indicator no more
                 display (and TVA ?)
      2016- 9-15 identified as a side effect of new ITVColumnable interface
+     2016- 9-21 when fixing, checks store and treeview::sort 
 
 1192 2016- 9-14 FEAT: export the balance for a period
 
@@ -471,10 +472,6 @@
 
 1198 2016- 9-15 ofaIStore, ofaListStore, ofaTtreeStore: review respective
                 rules and features of the interface and of the base classes
-
-1200 2016- 9-18 have a Notes indicator in DossierStore
-
-1201 2016- 9-18 make OpeTemplateTreeview sortable
 
 1202 2016- 9-18 when validating waiting recurrent operation, have a dialog
                 box which requests a confirmation for <n> operations
@@ -1671,6 +1668,14 @@
 1199 2016- 9-16 critical when importing BAT Boursorama du 29/09
                 cf. todo_1199
      2016- 9-18 fixed
+
+1200 2016- 9-18 have a Notes indicator in DossierStore
+     2016- 9-21 this is not possible because DossierStore takes its datas
+                from the configuration file which does not contain notes
+                -> cancelled
+
+1201 2016- 9-18 make OpeTemplateTreeview sortable
+     2016- 9-21 done
 
 1203 2016- 9-18 modifying an operation template mnemo is not reverberated
                 in recurrent operation
